src/components/layout/layout.module.scss
@import "../../styles/reset";

@media only screen and (max-device-width: 1200px) {
  .layout {
    max-width: 95%;
  }
}

@media only screen and (min-device-width: 1200px) {
  .layout {
    max-width: 1200px;
  }
}

.layout {
  margin: 2rem auto 10rem auto;

  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 3rem;
    flex-wrap: wrap;

    .title {
      @include reset-header-link;

      h1 {
        display: table-caption;
        font-size: 5rem;
      }
    }
  }
}

